--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^13.1.1",
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^4.5.3",
+    "express": "^4.18.2",
+    "jquery": "^3.6.1",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.6.14",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
